--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".sample.basic.BasicActivity" />
         <activity android:name=".sample.custombinding.CustomBindingActivity" />
-        <activity android:name=".sample.include.IncludeActivity"></activity>
+        <activity android:name=".sample.include.IncludeActivity" />
+        <activity android:name=".sample.collection.CollectionActivity"></activity>
     </application>
 
 </manifest>
