--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".sample.custombinding.CustomBindingActivity" />
         <activity android:name=".sample.include.IncludeActivity" />
         <activity android:name=".sample.collection.CollectionActivity" />
-        <activity android:name=".sample.resource.ResourceActivity"></activity>
+        <activity android:name=".sample.resource.ResourceActivity" />
+        <activity android:name=".sample.observable.ObservableActivity"></activity>
     </application>
 
 </manifest>
