--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".sample.resource.ResourceActivity" />
         <activity android:name=".sample.observable.ObservableActivity" />
         <activity android:name=".sample.viewWithIds.ViewWithIDsActivity" />
-        <activity android:name=".sample.viewstub.ViewStubActivity"></activity>
+        <activity android:name=".sample.viewstub.ViewStubActivity" />
+        <activity android:name=".sample.dynamic.DynamicActivity"></activity>
     </application>
 
 </manifest>
